--- a/templates/frontPage.html
+++ b/templates/frontPage.html
@@ -1,13 +1,9 @@
 <html>
-	<head>
-		<Link rel="stylesheet" href= '/static/css/style.css' />
-	</head>
-	<body>
-		{% extends "parent.html" %}
-	  	{% block content %} 
-		<h1> Website name </h1>
-		<a href="/hello/paul"> Hi Paul </a>
-		{% endblock %}
-	</body>
+<head>
+<link href="/static/css/style.css" rel="stylesheet"/>
+</head>
+<body>
+<ol>aaa</ol><h1> Website name </h1>
+<a href="/hello/paul"> Hi Paul </a>
+</body>
 </html>
-
