Able to delete and add to databases

--- a/templates/parent.html
+++ b/templates/parent.html
@@ -33,7 +33,7 @@
 			}
 			.add{
 				position: absolute;
-				color: yellow;
+				color: green;
 				float: left;
 				bottom: 5%;
 				left: 1%;
@@ -83,7 +83,7 @@
 			<input type="submit" value="add" >
 		</form>
 		<form name="form2" action='{{url_for('removeEmail') }}' method="post">
-			name:<input type ="text" name="EmailInput">
+			name:<input type ="text" name="EmailRemoval">
 			<input type="submit" value="remove" >
 		</form>
 
