--- a/templates/frontPage.html
+++ b/templates/frontPage.html
@@ -3,5 +3,5 @@
 <link href="/static/css/style.css" rel="stylesheet"/>
 </head>
 <body>
-<ol><li>c</li><li>b</li><li>a</li></ol></body>
+<ol></ol></body>
 </html>
