Edited out some syntax errors

--- a/templates/frontPage.html
+++ b/templates/frontPage.html
@@ -3,5 +3,5 @@
 <link href="/static/css/style.css" rel="stylesheet"/>
 </head>
 <body>
-<ol><li>abcd</li></ol></body>
+<ol><li>chuguo14@gmail.com</li><li>xiong.charles98@gmail.com</li><li>abcd</li></ol></body>
 </html>
